ros2_ws/log/build_2024-09-03_18-45-06/autonomo/stderr.log
  File "/home/frock/code/AyDpVA/ros2_ws/install/autonomo/lib/python3.12/site-packages/autonomo/publisher.py", line 39
    if__name__=='__main__': # type: ignore
                          ^
SyntaxError: invalid syntax

